test up load github for check error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,21 +4,10 @@
     <string name="moreInfo">More Info</string>
     <string name="aboutMe">About Me</string>
 
-    <string name="goDe">ชื่อ สิทธา สายใหม่</string>
-    <string name="goDe2">รหัสนักศึกษ 5711020660041</string>
-    <string name="goDe3">หลักสูตร่ วิทยาการคอม</string>
-    <string name="goDe4">Facebook</string>
-
-    <string name="godd1">สิทธา สายใหม่</string>
-    <string name="godd2">5711020660041</string>
-    <string name="godd3">วิทยาการคอม</string>
-
-    <string name="gooop">
-        ชื่อ สิทธา สายใหม่ \n
-        รหัสนักศึกษา 5711020660041 \n
-        หลังกสูตร วิทยาการคอมพิวเตอร์ \n
-
-
-            </string>
+    <string name="my_name"><B>ชื่อ :</B> สิทธา สายใหม่</string>
+    <string name="my_ID"><B>รหัสนักศึกษ :</B> 5711020660041</string>
+    <string name="my_comsci"><b>หลักสูตร่ :</b> วิทยาการคอม</string>
+    <string name="my_phone"><b>เบอร์โทร :</b> 0970292720</string>
+    <string name="my_facebook"><b>Facebook :</b> สิทธา สายใหม่</string>
 
 </resources>
